[omnibox] Keep popup open after reverting from a non-default keyword match

Previously, when entering keyword mode, original_url_ was cleared and
has_temporary_text_ was set to true. Additionally, the omnibox compared
original_url_ with the selected match's URL in order to determine
whether pressing <escape> should revert the omnibox or close the popup.
Specifically, if the URLs differed and has_temporary_text_ was true,
then the omnibox deduced the default match was selected and <escape>
would close the popup; otherwise, a non-default match was selected and
the popup would close.

Because keyword hint matches have blank URLs and entering keyword mode
would clear original_url_, the omnibox would believe the default match
was selected after entering keyword mode. This would cause <escape> to
close the omnibox. When the default match was actually selected, this
was correct behavior, but when a non-default match was selected,
<escape> should have reverted the omnibox instead.

With this CL:
1) Accepting a keyword no longer sets has_temporary_text_ to true.
2) The omnibox relies solely on has_temporary_text_ to determine if the
default match is selected and <escape>'s behavior. After accepting a
default match keyword, has_temporary_text_ will be false, and <escape>
will continue to correctly close the popup. However, after accepting a
non-default match keyword, has_temporary_text_ will be true, and
<escape> will now correctly revert the popup.
3) Consequently, original_url_ is no longer needed and removed.
4) Since has_temporary_text_ is no longer set true when entering keyword
by tab, we rely on keyword_mode_entry_method_ to differentiate entry by
tab v space. This is important when exiting keyword mode by backspace,
as leaving a space-entered-keyword should leave a trailing space.

Bug: 702866
Change-Id: I6ab461ec0c3f5ca742a6954ee717bcc221f235ea
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1506378
Commit-Queue: manuk hovanesian <manukh@chromium.org>
Reviewed-by: manuk hovanesian <manukh@chromium.org>
Reviewed-by: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#639594}
Former-commit-id: 0ac916f97c0501895ffd9a116920de3cb40d4cd4